fix Crisp on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -109,9 +109,6 @@ body,
     .gradient-btn {
         @apply bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500;
     }
-}
-
-@layer base {
     * {
         @apply border-border;
     }
